app/scss/module/_logo.scss
/**
* Logo
*
*/

#{$v}-logo {
  border-radius: 1000px;
  padding: 0px;
  margin: 0px;
  width: 40px;
  height: 40px;
  overflow: hidden;
  background: $navy-darkest;
  text-align: center;
  color: $red;
  line-height: 40px;
  font-weight: 100;
  font-size: $basefont + 6;

  #{$v}-is-devtools & {
    width: 30px;
    height: 30px;
    line-height: 30px;
  }
}


/**
* Logo image
*
*/

#{$v}-logo-image {
  margin: 0px auto;
  display: block;
  width: 80px;
  height: 80px;

  #{$v}-is-devtools & {
    width: 70px;
    height: 70px;
  }
}


/**
* Badge Logo
*
*/

#{$v}-badge {
  opacity: .7;
  background: url(../images/badge-small-translucent.png) top left no-repeat;
  display: block;
  width: 146px;
  height: 24px;
  overflow: hidden;
  text-indent: -3000px;
  text-decoration: none;
  position: absolute;
  bottom: 10px;
  left: 50%;
  margin-left: -73px;
  z-index: 1;
}


/**
* Main Title
*
*/

#{$v}-title {
  text-align: center;
  margin: 0px;
  padding: 0px;
  color: $red;
  font-size: $basefont * 2;
  line-height: auto;
  font-family: $default-font;
  text-transform: uppercase;
  font-weight: 100;
}

/**
* Sub Title
*
*/
#{$v}-sub-title {
  text-align: center;
  margin: 0px 0px 20px 0px;
  padding: 0px;
  color: $gray-light;
  font-size: $basefont - 2;
  line-height: $baseline;
  font-family: $default-font;
  font-weight: 200;
  letter-spacing: 1px;
  text-transform: uppercase;
}

